# SampleWork

KaliShare/: Dockerfile  Dockerfile.frontend  Dockerfile.railway  RAILWAY_CLI_ISSUES.md  RAILWAY_TROUBLESHOOTING.md  README.md  TROUBLESHOOTING.md  deploy-railway.sh  deploy-render.sh  deploy-safely.sh  docker-compose.yml  railway-backend.json  railway-frontend.json  render.yaml  run-tests.sh  start-services.sh  stop-services.sh  test-auth.sh  test-hf-api.js  test-qwen-api.js
KaliShare/backend/: jest.config.js  package-lock.json  package.json  server.js  test-ai.js  test-hf-api.js
KaliShare/backend/data/: resources.js
KaliShare/backend/database/: db.js
KaliShare/backend/routes/: ai.js  auth.js  search.js  timeline.js
KaliShare/backend/services/: resourceGenerator.js
KaliShare/backend/tests/: auth.test.js  livestream.test.js  setup.js
KaliShare/backend/tests/e2e/: app.e2e.test.js
KaliShare/backend/tests/integration/: ai.integration.test.js  auth.integration.test.js  timeline.integration.test.js
KaliShare/backend/tests/unit/: database.test.js
KaliShare/docs/: AI_INTEGRATION.md  ANALYTICS_GUIDE.md  DEPLOYMENT.md  DOCUMENTATION_STATUS.md  GITHUB_WORKFLOWS.md  RAILWAY_DEPLOYMENT.md  RAILWAY_FRONTEND_SETUP.md  RAILWAY_SETUP.md  README.md  RENDER_DEPLOYMENT.md  SETUP_COMPLETE.md  TESTING_STRATEGY.md  TESTING_SUMMARY.md  UI_ENHANCEMENTS.md
KaliShare/frontend/: package-lock.json  package.json
KaliShare/frontend/public/: index.html  manifest.json
KaliShare/frontend/src/: App.css  App.js  index.css  index.js
KaliShare/frontend/src/components/: AI.js  AI.module.css  Contact.js  Home.js  Login.js  Navbar.js  Search.js  Signup.js  Timeline.js
KaliShare/frontend/src/components/__tests__/: Login.test.js  Timeline.test.js
KaliShare/frontend/src/config/: api.js
KaliShare/frontend/src/hooks/: useAnalytics.js
KaliSocialMediaScraper/: Makefile  README.md  WEB_INTERFACE_COMPLEXITY_ANALYSIS.md  example.py  pyproject.toml  requirements.txt  setup.py  web_interface_demo.py  web_interface_frontend_demo.html  web_interface_plan.md
KaliSocialMediaScraper/database_schemas/: README.md  mssql_schema.sql  mysql_schema.sql  oracle_schema.sql  postgresql_schema.sql  sqlite_schema.sql
KaliSocialMediaScraper/database_schemas/migration_scripts/: README.md  sqlite_to_postgresql.sql
KaliSocialMediaScraper/scraper/: __init__.py  cli.py
KaliSocialMediaScraper/scraper/core/: __init__.py  base_scraper.py  database.py  proxy_manager.py  rate_limiter.py  user_agent.py
KaliSocialMediaScraper/scraper/utils/: __init__.py  helpers.py  logger.py  validators.py
KaliSocialMediaScraper/tests/: test_twitter_scraper.py
PythonBot/: Dockerfile.mock  README.md  ai_service.py  aws-deployment.md  config.py  database.py  demo-mock.sh  demo-setup.md  demo-start.sh  docker-compose.yml  scheduler_service.py  twilio_service.py
PythonBot/demo-package/: INSTALL.md  README.md  demo-examples.md  docker-compose.mock.yml  live-demo.sh  main.py  main_mock.py  mock_services.py  models.py  quick-test.sh  requirements.txt  start-demo.sh  stop-demo.sh
PythonBot/tests/: test_main.py
sql-performance-monitoring-tool/src/: app.py  commands.py  db.py  main.py
sql-performance-monitoring-tool/src/collectors/: sql_collector.py
sql-performance-monitoring-tool/src/models/: __init__.py
sql-performance-monitoring-tool/src/templates/: index.html  query_result.html
sql-performance-monitoring-tool/src/visualizers/: performance_visualizer.py
